# hello-my-deep_agents

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.middleware.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh
.run/: ch01_01_hello_world.run.xml  ch01_02_functions_and_types.run.xml  ch01_03_classes_and_oop.run.xml  ch01_04_imports_and_packages.run.xml  ch01_05_venv_and_pip.run.xml  ch01_06_async_basics.run.xml  ch01_07_fastapi_mini.run.xml  ch02_01_chat_basic.run.xml  ch02_02_prompt_template.run.xml  ch02_03_lcel_chain.run.xml  ch02_04_tool_call.run.xml  ch02_05_react_agent.run.xml  ch03_01_langchain_only.run.xml  ch03_02_langgraph.run.xml  ch03_03_deepagents.run.xml  ch04_01_custom_tool.run.xml  ch04_01_e2e_research_agent.run.xml  ch04_01_intent_classify.run.xml  ch04_01_quickstart.run.xml  ch04_01_short_term.run.xml  ch04_01_three_role_agent.run.xml  ch04_02_gradio_full_ui.run.xml  ch04_02_isolated_context.run.xml  ch04_02_rag_pipeline.run.xml  ch04_02_session_checkpointer.run.xml  ch04_02_state_graph_routing.run.xml  ch04_02_with_search.run.xml  ch04_03_deepagent_with_rag.run.xml  ch04_03_gradio_ui.run.xml  ch04_03_intent_with_deepagent.run.xml  ch04_03_long_term_vector.run.xml  ch04_03_recursive_subagent.run.xml  ch04_04_three_layers_combined.run.xml  ch05_01_decision_tree.run.xml  ch05_02_five_autonomy_levels.run.xml  ch05_03_when_workflow_wins.run.xml  ch06_01_prompt_chaining.run.xml  ch06_02_parallelization.run.xml  ch06_03_evaluator_optimizer.run.xml  (+23 more)
common/: llm.py  (+1 more)
(+164 files in other folders)
